--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,22 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:backgroundTint="#F8F1F1"
     tools:context=".Map">
 
     <fragment
+        android:id="@+id/map_xiamen"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="1"
-        app:layout_constraintVertical_bias="0"
-        android:id="@+id/map_xiamen"
-        tools:context=".MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:context=".MapsActivity" />
+
+    <ImageButton
+        android:id="@+id/btn_attraction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:src="@drawable/ic_baseline_attractions_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_food"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        app:tint="@color/black"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/ic_baseline_fastfood_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_attraction"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_hotel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/ic_baseline_hotel_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_food"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_hospital"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:src="@drawable/ic_baseline_local_hospital_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_hotel"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_policeStation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:src="@drawable/ic_baseline_local_police_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_hospital"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_bus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:src="@drawable/ic_baseline_directions_bus_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_policeStation"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_railway"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/white"
+        app:tint="@color/black"
+        android:src="@drawable/ic_baseline_directions_railway_24"
+        app:layout_constraintStart_toEndOf="@+id/btn_bus"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
