--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -11,8 +11,8 @@
 
     <item
         android:id="@+id/menu_map"
-        android:icon="@drawable/ic_baseline_location_on_24"
-        android:title="View Map" />
+        android:icon="@drawable/ic_baseline_explore_24"
+        android:title="Explore" />
 
     <item
         android:id="@+id/menu_article"
