change sign in tab colour & map button retrieve data and display with recycler view failed!

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0"
-            android:background="@drawable/tab_background"/>
+            android:background="@drawable/tab_background"
+            app:tabIndicatorColor="@color/primary_color"
+            app:tabSelectedTextColor="@color/primary_color"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
