--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_attractions_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,8 +37,8 @@
         android:id="@+id/btn_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:padding="8dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_fastfood_24"
@@ -49,8 +49,8 @@
         android:id="@+id/btn_hotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:padding="8dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_hotel_24"
@@ -63,8 +63,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_local_hospital_24"
         app:layout_constraintStart_toEndOf="@+id/btn_hotel"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,8 +75,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_local_police_24"
         app:layout_constraintStart_toEndOf="@+id/btn_hospital"
         app:layout_constraintTop_toTopOf="parent" />
@@ -87,8 +87,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_directions_bus_24"
         app:layout_constraintStart_toEndOf="@+id/btn_policeStation"
         app:layout_constraintTop_toTopOf="parent" />
@@ -99,8 +99,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:background="@color/white"
-        app:tint="@color/black"
+        android:background="@color/primary_color"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_directions_railway_24"
         app:layout_constraintStart_toEndOf="@+id/btn_bus"
         app:layout_constraintTop_toTopOf="parent" />
