--- a/app/src/main/res/layout/destination_card_layout.xml
+++ b/app/src/main/res/layout/destination_card_layout.xml
@@ -11,6 +11,7 @@
     app:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/dest_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
