--- a/app/src/main/res/layout/fragment_destination_description.xml
+++ b/app/src/main/res/layout/fragment_destination_description.xml
@@ -222,14 +222,14 @@
 
         <ImageView
             android:id="@+id/iv_favourite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:tint="@color/primary_color"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_baseline_favorite_border_24"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="#FF0000" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
