--- a/app/src/main/res/drawable/comment_background.xml
+++ b/app/src/main/res/drawable/comment_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F5F5F5"/>
+    <solid android:color="@color/white"/>
     <stroke android:color="@color/secondary_color"
         android:width="1dp"/>
     <corners android:radius="10dp"/>
