--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/bottom_sheet_background">
 
     <TextView
+        android:id="@+id/tv_bottomTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
