--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F9F9F9"
+    android:background="@color/white"
     tools:context=".Profile">
 
     <ImageView
@@ -41,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView7">
 
         <LinearLayout
+            android:id="@+id/btn_update"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -69,6 +70,7 @@
             android:background="@color/grey" />
 
         <LinearLayout
+            android:id="@+id/btn_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
