--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -16,10 +16,10 @@
 
     <item
         android:id="@+id/menu_article"
-        android:icon="@drawable/ic_baseline_article_24"
-        android:title="blog" />
+        android:icon="@drawable/ic_baseline_tips_and_updates_24"
+        android:title="Travel Tip" />
     <item
         android:id="@+id/menu_profile"
         android:icon="@drawable/ic_baseline_account_circle_24"
-        android:title="profile"/>
+        android:title="Profile"/>
 </menu>
