done search function

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,13 +38,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/tv_search"
+            android:id="@+id/et_search"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/search_bar"
             android:ems="10"
             android:hint="Search Destination"
+            android:imeOptions="actionSearch"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,14 +54,14 @@
             app:layout_constraintWidth_percent="0.95" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/image_search"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
             android:src="@drawable/ic_baseline_search_24"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_search"
-            app:layout_constraintEnd_toEndOf="@+id/tv_search"
-            app:layout_constraintTop_toTopOf="@+id/tv_search" />
+            app:layout_constraintBottom_toBottomOf="@+id/et_search"
+            app:layout_constraintEnd_toEndOf="@+id/et_search"
+            app:layout_constraintTop_toTopOf="@+id/et_search" />
 
         <TextView
             android:id="@+id/textView3"
@@ -104,7 +105,7 @@
             app:borderWidth="2dp"
             app:fabCustomSize="65dp"
             app:layout_constraintEnd_toStartOf="@+id/filter_attraction"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             app:maxImageSize="40dp"
             app:tint="@color/white" />
 
@@ -121,7 +122,7 @@
             app:borderWidth="2dp"
             app:fabCustomSize="65dp"
             app:layout_constraintEnd_toStartOf="@+id/filter_shopping"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             app:maxImageSize="40dp"
             app:tint="@color/white" />
 
@@ -138,7 +139,7 @@
             app:fabCustomSize="65dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             app:maxImageSize="40dp"
             app:tint="@color/white" />
 
@@ -155,7 +156,7 @@
             app:borderWidth="2dp"
             app:fabCustomSize="65dp"
             app:layout_constraintStart_toEndOf="@+id/filter_shopping"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             app:maxImageSize="40dp"
             app:tint="@color/white" />
 
@@ -172,7 +173,7 @@
             app:borderWidth="2dp"
             app:fabCustomSize="65dp"
             app:layout_constraintStart_toEndOf="@+id/filter_beach"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             app:maxImageSize="40dp"
             app:tint="@color/white" />
 
